@@ -1,5 +1,6 @@
 libece X.Y ():
 	- API: ECE-specific extensions (ECE_TYPE_SECE defined on win32)
+	- op_cert: CN based on CSR template value if provided (user can give a label)
 	- rename: {cacert,cert,key}1 => init_{ca,cert,key},
 	  {cacaert,cert,key}2 => op_{ca,cert,key}
 	- bindings: fix typo in sb_conf_get_vpn_ip()
